Version 0.8.10   - xx March 2002
  * Add warnings for unpacking sequence of wrong size
  * Add --changetypes option to warn when setting a variable to different types
  * Add --stringiter option to warn when iterating over a string
  * Add --input option to warn when using input()
  * Fix crash with checking properties or deriving from objects (2.2 only)
  * Fix crash with nested scopes and lambdas
  * Fix spurious warnings for constant conditionals when using ('%s' % value)
  * Fix spurious warnings for unused identifiers caused by from XXX import *
  * Add more information when module cannot be imported
  * Fix spurious warnings for implicit returns when using while 1:
  * Fix spurious warnings for implicit returns when using try/finally:
  * Fix spurious warning with globals that start w/__
  * Fix spurious warnings for modifying default arguments 
        when calling {}.get(), {}.has_key(), [].index(), [].count(), etc.
  * Fix spurious warnings in Python 1.5.2 when using from/import

Version 0.8.9   - 02 February 2002
  * Add -3/--properties warning when using properties with classic classes
  * Add more warnings for statements with no effect
  * Fix crash due to import module problems
  * Fix crash with nested scopes
  * Fix spurious warnings about module attributes and importing
  * Fix spurious warnings in Python 2.2 when using builtin classes (eg, socket)
  * Fix spurious warning for format string problem when using % at module scope
  * Fix spurious warning for implicit returns when doing while 1:
  * Fix spurious warning for inconsistent return types 
        when objects are subclasses
  * Don't warn about inconsistent return types from __getattr[ibute]__
  * Always assume readline module is used if input/raw_input is used

Version 0.8.8   - 13 January 2002
  * Add -F/--config option to specify pycheckrc file to use
        Always read $HOME/.pycheckrc, .pycheckrc, and -F options in that order