@@ -1,5 +1,6 @@
 Version 0.8.10   - xx March 2002
-  * Add warnings for unpacking sequence of wrong size
+  * Add --unpack option to warn when unpacking a non-sequence
+  * Add --unpacklen option to warn when unpacking sequence of wrong size
   * Add --changetypes option to warn when setting a variable to different types
   * Add --stringiter option to warn when iterating over a string
   * Add --input option to warn when using input()
